// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly with primary variant, lg size, black colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-800 p-800 text-100 bg-solid-slate-1400 text-solid-slate-50 hover:bg-solid-slate-800 active:bg-solid-slate-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with primary variant, lg size, coral colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-800 p-800 text-100 bg-solid-coral-700 text-solid-slate-50 hover:bg-solid-coral-800 active:bg-solid-coral-900"
>
  Click me
</button>
`;

exports[`Button should render correctly with primary variant, lg size, white colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-800 p-800 text-100 bg-solid-slate-50 text-solid-slate-1400 hover:bg-opacity-white-800 active:bg-opacity-white-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with primary variant, md size, black colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-600 p-600 text-75 bg-solid-slate-1400 text-solid-slate-50 hover:bg-solid-slate-800 active:bg-solid-slate-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with primary variant, md size, coral colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-600 p-600 text-75 bg-solid-coral-700 text-solid-slate-50 hover:bg-solid-coral-800 active:bg-solid-coral-900"
>
  Click me
</button>
`;

exports[`Button should render correctly with primary variant, md size, white colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-600 p-600 text-75 bg-solid-slate-50 text-solid-slate-1400 hover:bg-opacity-white-800 active:bg-opacity-white-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with primary variant, sm size, black colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-400 p-400 text-50 bg-solid-slate-1400 text-solid-slate-50 hover:bg-solid-slate-800 active:bg-solid-slate-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with primary variant, sm size, coral colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-400 p-400 text-50 bg-solid-coral-700 text-solid-slate-50 hover:bg-solid-coral-800 active:bg-solid-coral-900"
>
  Click me
</button>
`;

exports[`Button should render correctly with primary variant, sm size, white colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-400 p-400 text-50 bg-solid-slate-50 text-solid-slate-1400 hover:bg-opacity-white-800 active:bg-opacity-white-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with primary variant, xl size, black colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-1200 p-1200 text-300 bg-solid-slate-1400 text-solid-slate-50 hover:bg-solid-slate-800 active:bg-solid-slate-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with primary variant, xl size, coral colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-1200 p-1200 text-300 bg-solid-coral-700 text-solid-slate-50 hover:bg-solid-coral-800 active:bg-solid-coral-900"
>
  Click me
</button>
`;

exports[`Button should render correctly with primary variant, xl size, white colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-1200 p-1200 text-300 bg-solid-slate-50 text-solid-slate-1400 hover:bg-opacity-white-800 active:bg-opacity-white-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with secondary variant, lg size, black colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md border-75 border-solid-slate-1400 rounded-800 p-800 text-100 bg-solid-slate-50 text-solid-slate-1400 hover:bg-opacity-black-100 active:bg-opacity-black-200"
>
  Click me
</button>
`;

exports[`Button should render correctly with secondary variant, lg size, coral colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md border-75 border-solid-coral-700 rounded-800 p-800 text-100 bg-solid-red-100 text-solid-coral-700 hover:bg-solid-red-200 active:bg-solid-red-300"
>
  Click me
</button>
`;

exports[`Button should render correctly with secondary variant, lg size, white colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md border-solid-slate-50 rounded-800 p-800 text-100 bg-solid-slate-50 text-solid-slate-1400 hover:bg-opacity-white-800 active:bg-opacity-white-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with secondary variant, md size, black colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md border-75 border-solid-slate-1400 rounded-600 p-600 text-75 bg-solid-slate-50 text-solid-slate-1400 hover:bg-opacity-black-100 active:bg-opacity-black-200"
>
  Click me
</button>
`;

exports[`Button should render correctly with secondary variant, md size, coral colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md border-75 border-solid-coral-700 rounded-600 p-600 text-75 bg-solid-red-100 text-solid-coral-700 hover:bg-solid-red-200 active:bg-solid-red-300"
>
  Click me
</button>
`;

exports[`Button should render correctly with secondary variant, md size, white colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md border-solid-slate-50 rounded-600 p-600 text-75 bg-solid-slate-50 text-solid-slate-1400 hover:bg-opacity-white-800 active:bg-opacity-white-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with secondary variant, sm size, black colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md border-75 border-solid-slate-1400 rounded-400 p-400 text-50 bg-solid-slate-50 text-solid-slate-1400 hover:bg-opacity-black-100 active:bg-opacity-black-200"
>
  Click me
</button>
`;

exports[`Button should render correctly with secondary variant, sm size, coral colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md border-75 border-solid-coral-700 rounded-400 p-400 text-50 bg-solid-red-100 text-solid-coral-700 hover:bg-solid-red-200 active:bg-solid-red-300"
>
  Click me
</button>
`;

exports[`Button should render correctly with secondary variant, sm size, white colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md border-solid-slate-50 rounded-400 p-400 text-50 bg-solid-slate-50 text-solid-slate-1400 hover:bg-opacity-white-800 active:bg-opacity-white-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with secondary variant, xl size, black colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md border-75 border-solid-slate-1400 rounded-1200 p-1200 text-300 bg-solid-slate-50 text-solid-slate-1400 hover:bg-opacity-black-100 active:bg-opacity-black-200"
>
  Click me
</button>
`;

exports[`Button should render correctly with secondary variant, xl size, coral colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md border-75 border-solid-coral-700 rounded-1200 p-1200 text-300 bg-solid-red-100 text-solid-coral-700 hover:bg-solid-red-200 active:bg-solid-red-300"
>
  Click me
</button>
`;

exports[`Button should render correctly with secondary variant, xl size, white colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md border-solid-slate-50 rounded-1200 p-1200 text-300 bg-solid-slate-50 text-solid-slate-1400 hover:bg-opacity-white-800 active:bg-opacity-white-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with tertiary variant, lg size, black colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-800 p-800 text-100 text-solid-slate-1400"
>
  Click me
</button>
`;

exports[`Button should render correctly with tertiary variant, lg size, coral colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-800 p-800 text-100 text-solid-coral-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with tertiary variant, lg size, white colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-800 p-800 text-100 text-solid-slate-50"
>
  Click me
</button>
`;

exports[`Button should render correctly with tertiary variant, md size, black colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-600 p-600 text-75 text-solid-slate-1400"
>
  Click me
</button>
`;

exports[`Button should render correctly with tertiary variant, md size, coral colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-600 p-600 text-75 text-solid-coral-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with tertiary variant, md size, white colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-600 p-600 text-75 text-solid-slate-50"
>
  Click me
</button>
`;

exports[`Button should render correctly with tertiary variant, sm size, black colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-400 p-400 text-50 text-solid-slate-1400"
>
  Click me
</button>
`;

exports[`Button should render correctly with tertiary variant, sm size, coral colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-400 p-400 text-50 text-solid-coral-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with tertiary variant, sm size, white colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-400 p-400 text-50 text-solid-slate-50"
>
  Click me
</button>
`;

exports[`Button should render correctly with tertiary variant, xl size, black colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-1200 p-1200 text-300 text-solid-slate-1400"
>
  Click me
</button>
`;

exports[`Button should render correctly with tertiary variant, xl size, coral colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-1200 p-1200 text-300 text-solid-coral-700"
>
  Click me
</button>
`;

exports[`Button should render correctly with tertiary variant, xl size, white colorStyle 1`] = `
<button
  class="disabled:opacity-300 leading-100 font-bold font-heading flex flex-row items-center justify-center gap-general-md rounded-1200 p-1200 text-300 text-solid-slate-50"
>
  Click me
</button>
`;
